First interpretation of obesity data with confirmed cases.

--- a/Realtime Rt mcmc.ipynb
+++ b/Realtime Rt mcmc.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -126,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2020, 5, 5, 0, 0)"
+       "datetime.datetime(2020, 5, 6, 0, 0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -152,57 +152,57 @@
      "output_type": "stream",
      "text": [
       "state\n",
-      "AK   2020-05-04\n",
-      "AL   2020-05-04\n",
-      "AR   2020-05-04\n",
-      "AZ   2020-05-04\n",
-      "CA   2020-05-04\n",
-      "CO   2020-05-04\n",
-      "CT   2020-05-04\n",
-      "DC   2020-05-04\n",
-      "DE   2020-05-04\n",
-      "FL   2020-05-04\n",
-      "GA   2020-05-04\n",
-      "HI   2020-05-04\n",
-      "IA   2020-05-04\n",
-      "ID   2020-05-04\n",
-      "IL   2020-05-04\n",
-      "IN   2020-05-04\n",
-      "KS   2020-05-04\n",
-      "KY   2020-05-04\n",
-      "LA   2020-05-04\n",
-      "MA   2020-05-04\n",
-      "MD   2020-05-04\n",
-      "ME   2020-05-04\n",
-      "MI   2020-05-04\n",
-      "MN   2020-05-04\n",
-      "MO   2020-05-04\n",
-      "MS   2020-05-04\n",
-      "MT   2020-05-04\n",
-      "NC   2020-05-04\n",
-      "ND   2020-05-04\n",
-      "NE   2020-05-04\n",
-      "NH   2020-05-04\n",
-      "NJ   2020-05-04\n",
-      "NM   2020-05-04\n",
-      "NV   2020-05-04\n",
-      "NY   2020-05-04\n",
-      "OH   2020-05-04\n",
-      "OK   2020-05-04\n",
-      "OR   2020-05-04\n",
-      "PA   2020-05-04\n",
-      "RI   2020-05-04\n",
-      "SC   2020-05-04\n",
-      "SD   2020-05-04\n",
-      "TN   2020-05-04\n",
-      "TX   2020-05-04\n",
-      "UT   2020-05-04\n",
-      "VA   2020-05-04\n",
-      "VT   2020-05-04\n",
-      "WA   2020-05-04\n",
-      "WI   2020-05-04\n",
-      "WV   2020-05-04\n",
-      "WY   2020-05-04\n",
+      "AK   2020-05-06\n",
+      "AL   2020-05-06\n",
+      "AR   2020-05-06\n",
+      "AZ   2020-05-06\n",
+      "CA   2020-05-06\n",
+      "CO   2020-05-06\n",
+      "CT   2020-05-06\n",
+      "DC   2020-05-06\n",
+      "DE   2020-05-06\n",
+      "FL   2020-05-06\n",
+      "GA   2020-05-06\n",
+      "HI   2020-05-06\n",
+      "IA   2020-05-06\n",
+      "ID   2020-05-06\n",
+      "IL   2020-05-06\n",
+      "IN   2020-05-06\n",
+      "KS   2020-05-06\n",
+      "KY   2020-05-06\n",
+      "LA   2020-05-06\n",
+      "MA   2020-05-06\n",
+      "MD   2020-05-06\n",
+      "ME   2020-05-06\n",
+      "MI   2020-05-06\n",
+      "MN   2020-05-06\n",
+      "MO   2020-05-06\n",
+      "MS   2020-05-06\n",
+      "MT   2020-05-06\n",
+      "NC   2020-05-06\n",
+      "ND   2020-05-06\n",
+      "NE   2020-05-06\n",
+      "NH   2020-05-06\n",
+      "NJ   2020-05-06\n",
+      "NM   2020-05-06\n",
+      "NV   2020-05-06\n",
+      "NY   2020-05-06\n",
+      "OH   2020-05-06\n",
+      "OK   2020-05-06\n",
+      "OR   2020-05-06\n",
+      "PA   2020-05-06\n",
+      "RI   2020-05-06\n",
+      "SC   2020-05-06\n",
+      "SD   2020-05-06\n",
+      "TN   2020-05-06\n",
+      "TX   2020-05-06\n",
+      "UT   2020-05-06\n",
+      "VA   2020-05-06\n",
+      "VT   2020-05-06\n",
+      "WA   2020-05-06\n",
+      "WI   2020-05-06\n",
+      "WV   2020-05-06\n",
+      "WY   2020-05-06\n",
       "Name: date, dtype: datetime64[ns]\n"
      ]
     },
@@ -212,7 +212,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51\n"
+      "0\n"
      ]
     }
    ],
@@ -245,79 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not all states have updated\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "state\n",
-       "AK   2020-05-04\n",
-       "AL   2020-05-04\n",
-       "AR   2020-05-04\n",
-       "AZ   2020-05-04\n",
-       "CA   2020-05-04\n",
-       "CO   2020-05-04\n",
-       "CT   2020-05-04\n",
-       "DC   2020-05-04\n",
-       "DE   2020-05-04\n",
-       "FL   2020-05-04\n",
-       "GA   2020-05-04\n",
-       "HI   2020-05-04\n",
-       "IA   2020-05-04\n",
-       "ID   2020-05-04\n",
-       "IL   2020-05-04\n",
-       "IN   2020-05-04\n",
-       "KS   2020-05-04\n",
-       "KY   2020-05-04\n",
-       "LA   2020-05-04\n",
-       "MA   2020-05-04\n",
-       "MD   2020-05-04\n",
-       "ME   2020-05-04\n",
-       "MI   2020-05-04\n",
-       "MN   2020-05-04\n",
-       "MO   2020-05-04\n",
-       "MS   2020-05-04\n",
-       "MT   2020-05-04\n",
-       "NC   2020-05-04\n",
-       "ND   2020-05-04\n",
-       "NE   2020-05-04\n",
-       "NH   2020-05-04\n",
-       "NJ   2020-05-04\n",
-       "NM   2020-05-04\n",
-       "NV   2020-05-04\n",
-       "NY   2020-05-04\n",
-       "OH   2020-05-04\n",
-       "OK   2020-05-04\n",
-       "OR   2020-05-04\n",
-       "PA   2020-05-04\n",
-       "RI   2020-05-04\n",
-       "SC   2020-05-04\n",
-       "SD   2020-05-04\n",
-       "TN   2020-05-04\n",
-       "TX   2020-05-04\n",
-       "UT   2020-05-04\n",
-       "VA   2020-05-04\n",
-       "VT   2020-05-04\n",
-       "WA   2020-05-04\n",
-       "WI   2020-05-04\n",
-       "WV   2020-05-04\n",
-       "WY   2020-05-04\n",
-       "Name: date, dtype: datetime64[ns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -330,6 +262,24 @@
       "text/plain": [
        "state  date      \n",
        "MA     2020-04-20   -177.0\n",
+       "Name: positive, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: MT has date with negative case counts\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "state  date      \n",
+       "MT     2020-05-05   -1.0\n",
        "Name: positive, dtype: float64"
       ]
      },
@@ -376,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
